--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 #form { 
-    background-color: #F5F5F5;
+    background-color: #D3D3D3;
     padding: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
