--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,10 @@ h1 {
     text-align:center;
 }
 
+input[type=radio] {
+    font-size: 1rem;
+    color: #536878;
+}
 
 input[type=submit] {
     font-size: 2rem;
