--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,6 +17,7 @@ h1 {
 
 #form { 
     background-color: #D3D3D3;
+    color: #536878;
     padding: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
