--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,16 @@ h1 {
     text-align:center;
 }
 
+#Results {
+    background-color: #D3D3D3;
+    color: #536878;
+    padding: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: auto;
+    text-align:center;
+}
+
 input[type=radio] {
     font-size: 1rem;
     color: #536878;
